teacher css added

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -72,6 +72,14 @@
 --------------------------------------------- */
 @import "common.scss";
 
+/* Tiny Slider
+--------------------------------------------- */
+@import "../../node_modules/tiny-slider/src/tiny-slider.scss";
+
+/* Popular Creator
+--------------------------------------------- */
+@import "popular-creator.scss";
+
 /* Footer
 --------------------------------------------- */
 @import "footer.scss";
