--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -1,5 +1,5 @@
 $main_color: #4640DE;
 $footer_bg_color: #021E40;
 $body_color: #101030;
-$heading_font_family: 'Playfair Display';
-$body_font_family: 'Yantramanav';
+$heading_font_family: 'Playfair Display', serif;
+$body_font_family: 'Yantramanav', sans-serif;
