--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -1,7 +1,7 @@
 body {
     font-family: $body_font_family;
     color: $body_color;
-    overflow: hidden;
+    overflow-x: hidden;
     line-height: 25px;
 }
 
@@ -11,7 +11,9 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: $heading_font_family;
+    font-family: $heading_font_family;
+    color: $body_color;
+    font-weight: 700;
 }
 
 a {
@@ -19,3 +21,8 @@ a {
     text-decoration: none;
 }
 
+
+img {
+    max-width: 100%;
+    height: auto;
+}
