--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -80,6 +80,10 @@
 --------------------------------------------- */
 @import "popular-creator.scss";
 
+/* Latest Posts
+--------------------------------------------- */
+@import "latest-post.scss";
+
 /* Footer
 --------------------------------------------- */
 @import "footer.scss";
