--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -76,6 +76,10 @@
 --------------------------------------------- */
 @import "../../node_modules/tiny-slider/src/tiny-slider.scss";
 
+/* Popular Topics
+--------------------------------------------- */
+@import "popular-topics.scss";
+
 /* Popular Creator
 --------------------------------------------- */
 @import "popular-creator.scss";
