--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -26,3 +26,22 @@ img {
     max-width: 100%;
     height: auto;
 }
+
+.welearner-btn {
+    padding: 15px 30px;
+    border: 1px solid #4640DE;
+    color: #4640DE;
+    border-radius: 2px;
+    font-weight: 700;
+    font-family: $body_font_family;
+    font-size: 16px;
+    transition: .3s;
+    &:hover {
+        color: #fff;
+        background-color: #4640DE;
+    }
+}
+
+.mb-60 {
+    margin-bottom: 60px;
+}
