course css added

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11905,6 +11905,108 @@ img {
   text-decoration: underline;
 }
 
+/* Course
+--------------------------------------------- */
+
+.single-course-item {
+  padding: 20px;
+  margin-bottom: 30px;
+  border: 1px solid #EEEDFD;
+  border-radius: 5px;
+}
+
+.single-course-item .course-content-body {
+  margin: 20px 0;
+  border-bottom: 1px solid #EEEDFD;
+}
+
+.single-course-item .course-content-body .course-meta a {
+  padding: 5px 20px;
+  border-radius: 19px;
+  color: white;
+  font-size: 16px;
+  font-family: "Yantramanav", sans-serif;
+  display: inline-block;
+}
+
+.single-course-item .course-content-body .course-meta .ratings i {
+  font-size: 14px;
+  width: 14px;
+  height: 14px;
+  margin-left: 4px;
+}
+
+.single-course-item .course-content-body .course-meta .ratings i.dashicons-star-empty {
+  color: #D3D2DF;
+}
+
+.single-course-item .course-content-body .course-meta .ratings i.dashicons-star-filled {
+  color: #FFC107;
+}
+
+.single-course-item .course-content-body h4,
+.single-course-item .course-content-body .h4 {
+  font-size: 24px;
+  line-height: 32px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.single-course-item .course-content-body h4 a,
+.single-course-item .course-content-body .h4 a {
+  color: #1C2D41;
+  transition: 0.3s;
+}
+
+.single-course-item .course-content-body h4 a:hover,
+.single-course-item .course-content-body .h4 a:hover {
+  color: #4640DE;
+}
+
+.single-course-item .course-content-body .course-author {
+  margin-bottom: 10px;
+}
+
+.single-course-item .course-content-body .course-author img {
+  width: 30px;
+  border-radius: 50%;
+  margin-right: 15px;
+}
+
+.single-course-item .course-content-body .course-author h5,
+.single-course-item .course-content-body .course-author .h5 {
+  font-family: "Yantramanav", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 25px;
+  margin-bottom: 0;
+  color: rgba(28, 45, 65, 0.5);
+}
+
+.single-course-item .course-content-footer del {
+  font-family: "Yantramanav", sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 27px;
+  color: #D3D2DF;
+}
+
+.single-course-item .course-content-footer span {
+  font-family: "Yantramanav", sans-serif;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 27px;
+  color: #4640DE;
+  margin-left: 10px;
+}
+
+.single-course-item .course-content-footer .welearner-btn {
+  padding: 11px;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 25px;
+}
+
 /* Popular Creator
 --------------------------------------------- */
 
