--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -80,6 +80,10 @@
 --------------------------------------------- */
 @import "popular-topics.scss";
 
+/* Course
+--------------------------------------------- */
+@import "course.scss";
+
 /* Popular Creator
 --------------------------------------------- */
 @import "popular-creator.scss";
