--- a/assets/scss/popular-creator.scss
+++ b/assets/scss/popular-creator.scss
@@ -1,18 +1,5 @@
-.section-title {
-    margin-bottom: 50px;
-    h2 {
-        font-size: 44px;
-        font-weight: 700;
-        line-height: 1.36;
-        margin-bottom: 25px;
-    }
-
-    p {
-        font-size: 20px;
-        line-height: 1.35;
-        color: #556170;
-        margin-bottom: 0;
-    }
+.popular-creator .container {
+    background-repeat: no-repeat !important;
 }
 
 .popular-creator {
