--- a/assets/scss/popular-topics.scss
+++ b/assets/scss/popular-topics.scss
@@ -6,7 +6,7 @@
     align-items: center;
     margin-bottom: 60px;
     .icon {
-        background-color: red;
+        background-color: #E8EAEC;
         width: 56px;
         height: 56px;
         border-radius: 19px;
