--- a/assets/scss/course.scss
+++ b/assets/scss/course.scss
@@ -14,6 +14,7 @@
                 font-size: 16px;
                 font-family: $body_font_family;
                 display: inline-block;
+                background-color: #E8EAEC;
             }
             .ratings {
                 i {
