--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -84,6 +84,10 @@
 --------------------------------------------- */
 @import "course.scss";
 
+/* Testimonials
+--------------------------------------------- */
+@import "testimonials.scss";
+
 /* Popular Creator
 --------------------------------------------- */
 @import "popular-creator.scss";
