--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -96,6 +96,10 @@
 --------------------------------------------- */
 @import "latest-post.scss";
 
+/* CTA
+--------------------------------------------- */
+@import "cta.scss";
+
 /* Footer
 --------------------------------------------- */
 @import "footer.scss";
