--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -21,6 +21,7 @@
         }
         color: rgba(255,255,255, 0.46);
         .social-icons {
+            margin-top: 50px;
             li {
                 margin-right: 12px;
                 a {
