--- a/assets/scss/latest-post.scss
+++ b/assets/scss/latest-post.scss
@@ -1,9 +1,14 @@
 .latest-blog {
-    padding: 130px 0;
+    padding: 130px 0 80px 0;
 }
 
 .single-blog-post {
-    margin-bottom: 30px;
+    margin-bottom: 50px;
+    .thumbnail {
+        img {
+            width: 100%;
+        }
+    }
     .content-body {
         h4 {
             font-size: 20px;
@@ -21,7 +26,7 @@
 
         a.readmore {
             text-transform: capitalize;
-            font-size: 14px;
+            font-size: 16px;
             color: rgba(96,88,241,0.8);
             transition: .3s;
             &:hover {
