--- a/assets/scss/popular-creator.scss
+++ b/assets/scss/popular-creator.scss
@@ -11,8 +11,10 @@
             background-color: #e9e9e9;
             position: relative;
             overflow: hidden;
+            text-align: center;
             img {
                 max-height: 350px;
+                width: 100%;
             }
             .overlay {
                 position: absolute;
@@ -45,11 +47,11 @@
             }
         }
         .content-body {
-            padding: 30px 0 30px 30px;
+            padding: 30px 0 0 30px;
             h4 {
                 font-size: 18px;
                 line-height: 31px;
-                margin-bottom: 8px;
+                margin-bottom: 10px;
                 a {
                     transition: .3s;
                     color: #1C2D41;
@@ -64,7 +66,7 @@
                 line-height: 27px;
                 text-transform: capitalize;
                 color: #556170;
-                font-family: 'Roboto', sans-serif;
+                font-family: $body_font_family;
             }
         }
     }
