courses customizer added

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11933,7 +11933,7 @@ img {
 
 .single-course-item {
   padding: 20px;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
   border: 1px solid #EEEDFD;
   border-radius: 5px;
 }
@@ -12029,6 +12029,11 @@ img {
   font-size: 12px;
   font-weight: 500;
   line-height: 25px;
+}
+
+.tranding-courses,
+.toprated-courses {
+  padding-bottom: 80px;
 }
 
 /* Testimonials
