--- a/assets/scss/testimonials.scss
+++ b/assets/scss/testimonials.scss
@@ -54,4 +54,11 @@
             }
         }
     }
-} 
+}
+
+
+@media (max-width: 991px) {
+    .testimonial-section-description {
+        margin-top: 60px;
+    }
+}
