--- a/assets/scss/course.scss
+++ b/assets/scss/course.scss
@@ -84,6 +84,12 @@
             line-height: 25px;
         }
     }
+
+    .course-thumbnail {
+        img {
+            width: 100%;
+        }
+    }
 }
 
 .tranding-courses,
