header and hero css added

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -76,9 +76,17 @@
 --------------------------------------------- */
 @import "../../node_modules/tiny-slider/src/tiny-slider.scss";
 
+/* Header
+--------------------------------------------- */
+@import "header.scss";
+
 /* Popular Topics
 --------------------------------------------- */
 @import "popular-topics.scss";
+
+/* Hero
+--------------------------------------------- */
+@import "hero.scss";
 
 /* Course
 --------------------------------------------- */
