--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11896,6 +11896,309 @@ img {
   float: left;
 }
 
+/* Header
+--------------------------------------------- */
+
+.site-header {
+  z-index: 999;
+  margin-top: 25px;
+  padding: 15px 0;
+}
+
+.site-header .header-btn {
+  padding: 15px 25px;
+  border-radius: 2px;
+  color: #6058F1;
+  font-weight: 500;
+  font-family: "Yantramanav", sans-serif;
+  background-color: #fff;
+  margin-left: 40px;
+  display: inline-block;
+}
+
+.site-header .main-menu ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.site-header .main-menu ul > li {
+  position: relative;
+}
+
+.site-header .main-menu ul > li > a {
+  position: relative;
+  display: block;
+  line-height: 1;
+  z-index: 1;
+  text-transform: capitalize;
+  font-size: 18px;
+  padding: 0 15px;
+  transition: 0.3s;
+  line-height: 50px;
+}
+
+.site-header .main-menu ul > li > a:hover {
+  color: #222;
+}
+
+.site-header .main-menu ul > li > a i {
+  padding-left: 10px;
+  font-size: 12px;
+}
+
+.site-header .main-menu ul > li:hover > ul {
+  visibility: visible;
+  opacity: 1;
+}
+
+.site-header .main-menu ul li {
+  position: relative;
+}
+
+.site-header .main-menu ul li ul {
+  position: absolute;
+  left: 0;
+  top: 100%;
+  visibility: hidden;
+  opacity: 0;
+  background-color: #fff;
+  width: 180px;
+  z-index: 9;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
+
+.site-header .main-menu ul li ul li:hover > ul {
+  visibility: visible;
+  opacity: 1;
+}
+
+.site-header .main-menu ul li ul li a {
+  padding: 0 12px;
+  font-size: 16px;
+  display: block;
+}
+
+.site-header .main-menu ul li ul li a:hover {
+  color: #222;
+  margin-left: 5px;
+}
+
+.site-header .main-menu ul li ul li ul {
+  visibility: hidden;
+  opacity: 0;
+  top: 7px;
+  left: 100%;
+}
+
+.site-header .main-menu ul li.active > a {
+  color: #222;
+}
+
+.site-header.position-absolute .main-menu > ul > li > a {
+  color: #fff;
+}
+
+.site-header.position-absolute .logo .site-title a {
+  color: #fff;
+}
+
+.site-header.position-absolute #menu-button span,
+.site-header.position-absolute #menu-button span:after,
+.site-header.position-absolute #menu-button span:before {
+  background-color: #fff;
+}
+
+.site-header #menu-button {
+  display: none;
+  font-size: 28px;
+  cursor: pointer;
+}
+
+.site-header #menu-button span {
+  position: relative;
+}
+
+.site-header #menu-button span:after,
+.site-header #menu-button span:before {
+  position: absolute;
+  content: "";
+}
+
+.site-header #menu-button span,
+.site-header #menu-button span:after,
+.site-header #menu-button span:before {
+  display: block;
+  width: 25px;
+  height: 2px;
+}
+
+.site-header #menu-button span::before {
+  top: -7px;
+}
+
+.site-header #menu-button span::after {
+  top: 7px;
+}
+
+.site-header #menu-button.menu-opened span {
+  background-color: transparent !important;
+}
+
+.site-header #menu-button.menu-opened span::before {
+  transform: translateY(7px) rotate(45deg);
+}
+
+.site-header #menu-button.menu-opened span::after {
+  transform: translateY(-7px) rotate(-45deg);
+}
+
+.site-header #menu-button span,
+.site-header #menu-button span:after,
+.site-header #menu-button span:before {
+  background-color: #818181;
+}
+
+.site-header #menu-button.menu-opened span::after,
+.site-header #menu-button.menu-opened span::before {
+  background-color: red;
+}
+
+@media (max-width: 991px) {
+  .site-header .row {
+    position: relative;
+  }
+
+  .site-header .row div:nth-child(2) {
+    position: static;
+  }
+
+  .site-header .main-menu {
+    text-align: right;
+    position: initial;
+  }
+
+  .site-header .main-menu #menu-button {
+    display: inline-flex;
+    height: 25px;
+    width: 25px;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .site-header .main-menu ul {
+    display: none;
+    position: absolute;
+    top: calc(100% + 19px);
+    left: 50%;
+    right: 50%;
+    width: calc(100% - 30px);
+    background: #fff;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.05);
+    max-height: 350px;
+    overflow-y: auto;
+    padding: 15px 20px;
+    max-width: 800px;
+    transform: translateX(-50%);
+    z-index: 99999;
+    margin-right: 0;
+  }
+
+  .site-header .main-menu ul > li {
+    padding: 0;
+  }
+
+  .site-header .main-menu ul > li > a {
+    font-size: 15px;
+  }
+
+  .site-header .main-menu ul ul {
+    position: relative;
+    left: 0;
+    right: auto;
+    top: 0;
+    width: 100% !important;
+    display: none;
+    padding: 0;
+    opacity: 1;
+    visibility: visible;
+    text-align: left;
+    z-index: 99999;
+    box-shadow: none;
+    transform: translate3d(0, 0, 0);
+    border-bottom: none;
+  }
+
+  .site-header .main-menu ul ul li {
+    overflow: hidden;
+  }
+
+  .site-header .main-menu ul ul li:hover > a {
+    margin-left: 0;
+  }
+
+  .site-header .main-menu ul ul ul {
+    position: relative;
+    margin-left: 5px;
+    left: 0 !important;
+    opacity: 1;
+    visibility: visible;
+  }
+
+  .site-header .main-menu ul {
+    text-align: left;
+  }
+
+  .site-header .main-menu ul li {
+    display: block;
+    width: 100%;
+  }
+
+  .site-header .main-menu ul li a {
+    line-height: 1 !important;
+    padding: 12px 15px !important;
+    color: #3f3f3f !important;
+  }
+
+  .site-header .main-menu ul li.current-menu-item > a {
+    color: #222 !important;
+  }
+
+  .site-header .main-menu .submenu-button {
+    display: block;
+    position: absolute;
+    z-index: 9;
+    top: 0;
+    right: 15px;
+    width: 40px;
+    height: inherit;
+    line-height: 40px;
+    text-align: center;
+    color: initial;
+  }
+
+  .site-header .main-menu .submenu-button:before {
+    content: "\F054";
+    font-family: "Font Awesome 5 Free";
+    font-size: 8px;
+    font-weight: 900;
+  }
+
+  .site-header .main-menu .submenu-button.submenu-opened:before {
+    content: "\F077";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+  }
+}
+
+@media (max-width: 575px) {
+  .site-header .header-btn {
+    display: none;
+  }
+}
+
 /* Popular Topics
 --------------------------------------------- */
 
@@ -11938,6 +12241,87 @@ img {
 .popular-topics {
   padding-top: 130px;
   padding-bottom: 70px;
+}
+
+/* Hero
+--------------------------------------------- */
+
+.hero-area {
+  display: flex;
+  align-items: center;
+}
+
+.hero-area .banner-wrapper {
+  position: relative;
+  padding: 280px 0 220px;
+  z-index: 2;
+}
+
+.hero-area .banner-wrapper img.person-img {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+}
+
+.hero-area .banner-content h2,
+.hero-area .banner-content .h2 {
+  font-size: 65px;
+  line-height: 72px;
+  color: #fff;
+  margin-bottom: 35px;
+}
+
+.hero-area .banner-content p {
+  font-size: 20px;
+  color: #fff;
+  line-height: 40px;
+  margin-bottom: 0;
+}
+
+.hero-area .course-search-form {
+  margin-top: 50px;
+}
+
+.hero-area .course-search-form form {
+  position: relative;
+}
+
+.hero-area .course-search-form form input[type=text] {
+  width: 100%;
+  height: 90px;
+  padding-left: 40px;
+}
+
+.hero-area .course-search-form form input[type=submit] {
+  position: absolute;
+  top: 50%;
+  right: 20px;
+  transform: translateY(-50%);
+  padding: 18px 55px;
+  border: none;
+  cursor: pointer;
+  color: #fff;
+  background-color: #4640DE;
+  border-radius: 2px;
+}
+
+@media (max-width: 991px) {
+  .hero-area .banner-content h2,
+  .hero-area .banner-content .h2 {
+    font-size: 44px;
+    line-height: 1;
+  }
+
+  .hero-area .banner-content p {
+    line-height: 1;
+  }
+}
+
+@media (max-width: 575px) {
+  .hero-area .banner-wrapper {
+    padding: 200px 0 200px;
+  }
 }
 
 /* Course
