--- a/assets/scss/cta.scss
+++ b/assets/scss/cta.scss
@@ -56,7 +56,8 @@
     }
 
     .single-cta .cta-btn-wrapper {
-        bottom: 40px;
+        position: static;
+        transform: translateX(0);
     }
 
     .single-cta h2 {
@@ -65,6 +66,7 @@
 
     .single-cta p {
         width: auto;
+        margin-bottom: 30px;
     }
 
 }
