--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -270,16 +270,16 @@
 				text-align: center;
 				color: initial;
 				&:before {
-					content: "\f054";
-					font-family: "Font Awesome 5 Free";
+					content: "\f345";
+					font-family: "Dashicons";
 					font-size: 8px;
 					font-weight: 900;
 				}
 			}
 			.submenu-button.submenu-opened {
 				&:before {
-					content: "\f077";
-					font-family: "Font Awesome 5 Free";
+					content: "\f343";
+					font-family: "Dashicons";
 					font-weight: 900;
 				}
 			}
