santization added in customizer

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*!
 Theme Name: Welearner
-Theme URI: http://underscores.me/
+Theme URI: https://github.com/ahsanshaheen199/welearner
 Author: Ahsan Habib Shaheen
 Author URI: https://github.com/ahsanshaheen199
 Description: Description
